# doppelback

./: Cargo.toml  README.md  sample-polkit.rules  sample.yaml
src/: args.rs  config.rs  doppelback_error.rs  main.rs  rsync_util.rs
src/commands/: backup.rs  mod.rs  rsync.rs  snapshots.rs  ssh.rs  sudo.rs
