[package]
name = "doppelback"
version = "0.1.0"
edition = "2021"
authors = ["Benjamin Gordon <ben@bxg.org>"]

[dependencies]
chrono = "0.4"
structopt = "0.3"
log = "0.4"
fern = "0.5"
itertools = "0.10"
pathsearch = "0.2"
tempdir = "0.3"
lazy_static = "1.4.0"
regex = "1"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"
libc = "0.2"
